[gd_scene load_steps=2 format=3 uid="uid://beq8q1oapxmw5"]

[ext_resource type="Script" uid="uid://cjwprrnv1l3xv" path="res://Scenes/MapSelection.gd" id="1_mcbxx"]

[node name="MapSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_mcbxx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1082.0
color = Color(0.303233, 0.303233, 0.303233, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 578.0
offset_top = 356.0
offset_right = 1387.0
offset_bottom = 908.0

[node name="Map1Container" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1

[node name="Map1Info" type="Label" parent="VBoxContainer/Map1Container"]
layout_mode = 2

[node name="MapButton1" type="Button" parent="VBoxContainer/Map1Container"]
layout_mode = 2
text = "Mapa1"

[node name="Map2Container" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1

[node name="Map2Info" type="Label" parent="VBoxContainer/Map2Container"]
layout_mode = 2

[node name="MapButton2" type="Button" parent="VBoxContainer/Map2Container"]
layout_mode = 2
text = "Mapa2"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Map1Container/MapButton1" to="." method="_on_map1_pressed"]
[connection signal="pressed" from="VBoxContainer/Map2Container/MapButton2" to="." method="_on_map2_pressed"]
